--- a/src/Dex.Buffer/Dex.Buffer.csproj
+++ b/src/Dex.Buffer/Dex.Buffer.csproj
@@ -3,6 +3,11 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
         <PackageTags>dex; buffer</PackageTags>
+        <PackageLicenseUrl>https://github.com/dex-it/dex-common/blob/main/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/dex-it/dex-common</RepositoryUrl>
+        <Copyright>dex</Copyright>
+        <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
+        <RepositoryType>github</RepositoryType>
     </PropertyGroup>
 
 </Project>
