--- a/src/Dex.Extensions/Dex.Extensions.csproj
+++ b/src/Dex.Extensions/Dex.Extensions.csproj
@@ -4,6 +4,11 @@
         <LangVersion>default</LangVersion>
         <TargetFramework>netstandard2.1</TargetFramework>
         <PackageTags>dex; extensions</PackageTags>
+        <PackageLicenseUrl>https://github.com/dex-it/dex-common/blob/main/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/dex-it/dex-common</RepositoryUrl>
+        <Copyright>dex</Copyright>
+        <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
+        <RepositoryType>github</RepositoryType>
     </PropertyGroup>
 
 </Project>
