--- a/src/Dex.Inflector/Dex.Inflector.csproj
+++ b/src/Dex.Inflector/Dex.Inflector.csproj
@@ -3,7 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <PackageTags>dex, pluralize, singularize</PackageTags>
-
+    <PackageLicenseUrl>https://github.com/dex-it/dex-common/blob/main/LICENSE</PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/dex-it/dex-common</RepositoryUrl>
+    <Copyright>dex</Copyright>
+    <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
+    <RepositoryType>github</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net462' ">
