--- a/src/Dex.Lock.Database/Dex.Lock.Database.csproj
+++ b/src/Dex.Lock.Database/Dex.Lock.Database.csproj
@@ -3,6 +3,11 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
         <PackageTags>dex; database lock</PackageTags>
+        <PackageLicenseUrl>https://github.com/dex-it/dex-common/blob/main/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/dex-it/dex-common</RepositoryUrl>
+        <Copyright>dex</Copyright>
+        <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
+        <RepositoryType>github</RepositoryType>
     </PropertyGroup>
 
     <ItemGroup>
