#3 add Microsoft.CodeAnalysis.FxCopAnalyzers

--- a/src/Dex.Extensions/Dex.Extensions.csproj
+++ b/src/Dex.Extensions/Dex.Extensions.csproj
@@ -10,4 +10,7 @@
         <RepositoryType>github</RepositoryType>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0" Condition="'$(Configuration)'=='Debug'"/>
+    </ItemGroup>
 </Project>
