--- a/src/Dex.Lock.Database/Dex.Lock.Database.csproj
+++ b/src/Dex.Lock.Database/Dex.Lock.Database.csproj
@@ -13,4 +13,8 @@
       <ProjectReference Include="..\Dex.Lock\Dex.Lock.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0" Condition="'$(Configuration)'=='Debug'"/>
+    </ItemGroup>
+
 </Project>
