--- a/src/Dex.Inflector/Dex.Inflector.csproj
+++ b/src/Dex.Inflector/Dex.Inflector.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0" Condition="'$(Configuration)'=='Debug'"/>
   </ItemGroup>
 
 </Project>
