--- a/src/Dex.Lock.Redis/Dex.Lock.Redis.csproj
+++ b/src/Dex.Lock.Redis/Dex.Lock.Redis.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0" Condition="'$(Configuration)'=='Debug'"/>
       <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
     </ItemGroup>
 
