--- a/src/Dex.TeamCity/Dex.TeamCity.csproj
+++ b/src/Dex.TeamCity/Dex.TeamCity.csproj
@@ -9,4 +9,8 @@
         <RepositoryType>github</RepositoryType>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0" Condition="'$(Configuration)'=='Debug'"/>
+    </ItemGroup>
+
 </Project>
