--- a/src/Dex.Extensions/Dex.Extensions.csproj
+++ b/src/Dex.Extensions/Dex.Extensions.csproj
@@ -1,16 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <LangVersion>default</LangVersion>
-        <TargetFramework>netstandard2.1</TargetFramework>
-        <PackageTags>dex; extensions</PackageTags>
-        <RepositoryUrl>https://github.com/dex-it/dex-common</RepositoryUrl>
-        <Copyright>dex</Copyright>
-        <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
-        <RepositoryType>github</RepositoryType>
-    </PropertyGroup>
+  <PropertyGroup>
+      <LangVersion>Latest</LangVersion>
+      <Nullable>enable</Nullable>
+      <TargetFramework>netcoreapp3.1</TargetFramework>
+      <PackageTags>dex; extensions</PackageTags>
+      <RepositoryUrl>https://github.com/dex-it/dex-common</RepositoryUrl>
+      <Copyright>dex</Copyright>
+      <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
+      <RepositoryType>github</RepositoryType>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0" Condition="'$(Configuration)'=='Debug'"/>
-    </ItemGroup>
+  <ItemGroup>
+      <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0" Condition="'$(Configuration)'=='Debug'"/>
+  </ItemGroup>
 </Project>
