--- a/src/Tests/Dex.Extensions.TestProject/Dex.Extensions.TestProject.csproj
+++ b/src/Tests/Dex.Extensions.TestProject/Dex.Extensions.TestProject.csproj
@@ -1,19 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+  <PropertyGroup>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
+  </PropertyGroup>
 
-        <IsPackable>false</IsPackable>
-    </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="nunit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+  </ItemGroup>
 
-    <ItemGroup>
-        <PackageReference Include="nunit" Version="3.12.0" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Dex.Extensions\Dex.Extensions.csproj" />
+  </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\..\Dex.Extensions\Dex.Extensions.csproj" />
-    </ItemGroup>
+  <ItemGroup>
+    <EditorConfigFiles Update="C:\Users\v.danilov\source\repos\dex-common\src\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
 
 </Project>
