--- a/src/Dex.Lock/Dex.Lock.csproj
+++ b/src/Dex.Lock/Dex.Lock.csproj
@@ -9,4 +9,11 @@
         <RepositoryType>github</RepositoryType>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
