--- a/src/Dex.Lock/Dex.Lock.csproj
+++ b/src/Dex.Lock/Dex.Lock.csproj
@@ -1,19 +1,29 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
-        <PackageTags>dex; lock</PackageTags>
-        <RepositoryUrl>https://github.com/dex-it/dex-common</RepositoryUrl>
-        <Copyright>dex</Copyright>
-        <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
-        <RepositoryType>github</RepositoryType>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFrameworks>netcoreapp3.1;netstandard2.0</TargetFrameworks>
+    <PackageTags>dex; lock</PackageTags>
+    <RepositoryUrl>https://github.com/dex-it/dex-common</RepositoryUrl>
+    <Copyright>dex</Copyright>
+    <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
+    <RepositoryType>github</RepositoryType>
+    <Nullable>enable</Nullable>
+    <LangVersion>Latest</LangVersion>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.1">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="Nullable" Version="1.3.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
+  </ItemGroup>
 
 </Project>
