--- a/src/Dex.Lock.Database/Dex.Lock.Database.csproj
+++ b/src/Dex.Lock.Database/Dex.Lock.Database.csproj
@@ -7,6 +7,7 @@
         <Copyright>dex</Copyright>
         <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
         <RepositoryType>github</RepositoryType>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0" Condition="'$(Configuration)'=='Debug'"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0" Condition="'$(Configuration)'=='Debug'" />
     </ItemGroup>
 
 </Project>
