--- a/src/Dex.Lock/Dex.Lock.csproj
+++ b/src/Dex.Lock/Dex.Lock.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <PackageTags>dex; lock</PackageTags>
     <RepositoryUrl>https://github.com/dex-it/dex-common</RepositoryUrl>
     <Copyright>dex</Copyright>
