#16, add to IAsyncLock.cs generic argument for compatible with async, db and redis lock

--- a/src/Dex.Lock.Database/Dex.Lock.Database.csproj
+++ b/src/Dex.Lock.Database/Dex.Lock.Database.csproj
@@ -8,6 +8,7 @@
         <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
         <RepositoryType>github</RepositoryType>
         <Nullable>enable</Nullable>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
