--- a/src/Tests/Dex.Lock.TestProject/Dex.Lock.TestProject.csproj
+++ b/src/Tests/Dex.Lock.TestProject/Dex.Lock.TestProject.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
