--- a/src/Dex.PdfGenerator/Dex.PdfGenerator.csproj
+++ b/src/Dex.PdfGenerator/Dex.PdfGenerator.csproj
@@ -9,7 +9,10 @@
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Mvc.RazorPages" Version="2.2.5" />
-        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0" Condition="'$(Configuration)'=='Debug'"/>
+      <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="RazorLight" Version="2.0.0-beta1" />
       <PackageReference Include="RndUsr0.DinkToPdf" Version="1.0.9-20190207.1" />
     </ItemGroup>
