#15 refactoring specification and add not extensions

--- a/src/Tests/Dex.Specifications.TestProject/Dex.Specifications.TestProject.csproj
+++ b/src/Tests/Dex.Specifications.TestProject/Dex.Specifications.TestProject.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Dex.Specifications.EntityFramework\Dex.Specifications.EntityFramework.csproj" />
+      <ProjectReference Include="..\..\Dex.Specifications.Extensions\Dex.Specifications.Extensions.csproj" />
     </ItemGroup>
 
 </Project>
