--- a/src/Dex.Pagination/Dex.Pagination.csproj
+++ b/src/Dex.Pagination/Dex.Pagination.csproj
@@ -1,13 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <Compile Update="PageFilter.cs">
-        <DependentUpon>IPageFilter.cs</DependentUpon>
-      </Compile>
-    </ItemGroup>
+  <ItemGroup>
+    <Compile Update="PageFilter.cs">
+      <DependentUpon>IPageFilter.cs</DependentUpon>
+    </Compile>
+    <Compile Update="SortParam.cs">
+      <DependentUpon>ISortParam.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
 
 </Project>
