--- a/src/Tests/Dex.Specifications.EntityFramework.TestProject/Dex.Specifications.EntityFramework.TestProject.csproj
+++ b/src/Tests/Dex.Specifications.EntityFramework.TestProject/Dex.Specifications.EntityFramework.TestProject.csproj
@@ -7,8 +7,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.9" />
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
         <PackageReference Include="NUnit" Version="3.12.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
@@ -17,6 +15,8 @@
     <ItemGroup>
       <ProjectReference Include="..\..\Dex.Specifications.EntityFramework\Dex.Specifications.EntityFramework.csproj" />
       <ProjectReference Include="..\..\Dex.Specifications.Extensions\Dex.Specifications.Extensions.csproj" />
+      <ProjectReference Include="..\Dex.TestDomain\Dex.TestDomain.csproj" />
+      <ProjectReference Include="..\Dex.TestHelper\Dex.TestHelper.csproj" />
     </ItemGroup>
 
 </Project>
