--- a/src/Tests/Dex.Lock.DevelopmentTest/Dex.Lock.DevelopmentTest.csproj
+++ b/src/Tests/Dex.Lock.DevelopmentTest/Dex.Lock.DevelopmentTest.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dex.Lock\Dex.Lock.csproj" />
+    <ProjectReference Include="..\..\Dex.Lock\Dex.Lock.csproj" />
   </ItemGroup>
 
 </Project>
