--- a/src/Dex.MassTransit.Extensions/Dex.MassTransit.Extensions.csproj
+++ b/src/Dex.MassTransit.Extensions/Dex.MassTransit.Extensions.csproj
@@ -5,7 +5,21 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dex.Extensions" Version="1.0.5" />
       <PackageReference Include="MassTransit" Version="7.1.7" />
+      <PackageReference Include="MassTransit.AmazonSQS" Version="7.1.7" />
+      <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.1.7" />
+      <PackageReference Include="MassTransit.RabbitMQ" Version="7.1.7" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="MassTransitSender.cs">
+        <DependentUpon>IMassTransitSender.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
