separate to projects SQS, rabbitmq configurations

--- a/src/Tests/Dex.MassTransit.Sample.Test/Dex.MassTransit.Sample.Test.csproj
+++ b/src/Tests/Dex.MassTransit.Sample.Test/Dex.MassTransit.Sample.Test.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Dex.MassTransit.Extensions\Dex.MassTransit.Extensions.csproj" />
+      <ProjectReference Include="..\..\Dex.MassTransit.Rabbit\Dex.MassTransit.Rabbit.csproj" />
     </ItemGroup>
 
 </Project>
