--- a/src/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
+++ b/src/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dex.Extensions" Version="1.0.5" />
       <PackageReference Include="MassTransit.AmazonSQS" Version="7.1.7" />
       <PackageReference Include="MassTransit.AspNetCore" Version="7.1.7" />
       <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.1.7" />
