--- a/src/Tests/Dex.MassTransit.Sample.Test/Dex.MassTransit.Sample.Test.csproj
+++ b/src/Tests/Dex.MassTransit.Sample.Test/Dex.MassTransit.Sample.Test.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
+      <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.0.1" />
     </ItemGroup>
 
     <ItemGroup>
