--- a/src/Dex.Ef/Dex.Ef.csproj
+++ b/src/Dex.Ef/Dex.Ef.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <LangVersion>9</LangVersion>
+        <LangVersion>default</LangVersion>
         <Nullable>enable</Nullable>
     </PropertyGroup>
     
@@ -11,6 +11,6 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
     </ItemGroup>
 </Project>
