--- a/src/Dex.Extensions/Dex.Extensions.csproj
+++ b/src/Dex.Extensions/Dex.Extensions.csproj
@@ -8,14 +8,7 @@
       <Copyright>dex</Copyright>
       <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
       <RepositoryType>github</RepositoryType>
-      <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
       <EnableNETAnalyzers>true</EnableNETAnalyzers>
+      <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
 </Project>
