--- a/src/Dex.Inflector/Dex.Inflector.csproj
+++ b/src/Dex.Inflector/Dex.Inflector.csproj
@@ -7,6 +7,7 @@
     <Copyright>dex</Copyright>
     <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
     <RepositoryType>github</RepositoryType>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net462' ">
