--- a/src/Dex.Specifications.EntityFramework/Dex.Specifications.EntityFramework.csproj
+++ b/src/Dex.Specifications.EntityFramework/Dex.Specifications.EntityFramework.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
         <PackageTags>dex;specifications;entityframework</PackageTags>
         <RepositoryUrl>https://github.com/dex-it/dex-common</RepositoryUrl>
         <Copyright>dex</Copyright>
         <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
         <RepositoryType>github</RepositoryType>
+        <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
