sort params implement equals

--- a/src/Dex.Pagination/Dex.Pagination.csproj
+++ b/src/Dex.Pagination/Dex.Pagination.csproj
@@ -6,4 +6,13 @@
     <LangVersion>default</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Update="Data\SortParam.cs">
+      <DependentUpon>ISortParam.cs</DependentUpon>
+    </Compile>
+    <Compile Update="Data\PageFilter.cs">
+      <DependentUpon>IPageFilter.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
 </Project>
