--- a/src/Dex.DynamicQueryableExtensions/Dex.DynamicQueryableExtensions.csproj
+++ b/src/Dex.DynamicQueryableExtensions/Dex.DynamicQueryableExtensions.csproj
@@ -6,19 +6,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Compile Update="Data\SortCondition.cs">
+      <Compile Update="Data\OrderCondition.cs">
         <DependentUpon>ISortCondition.cs</DependentUpon>
       </Compile>
       <Compile Update="Data\PageFilter.cs">
         <DependentUpon>IPageFilter.cs</DependentUpon>
       </Compile>
-      <Compile Update="Data\QueryFilterEncodedRequest.cs">
-        <DependentUpon>IQueryFilterEncoded.cs</DependentUpon>
-      </Compile>
       <Compile Update="Data\FilterCondition.cs">
         <DependentUpon>IFilterCondition.cs</DependentUpon>
       </Compile>
-      <Compile Update="Data\ComplexQueryCondition.cs">
+      <Compile Update="Data\QueryCondition.cs">
         <DependentUpon>IComplexQueryCondition.cs</DependentUpon>
       </Compile>
     </ItemGroup>
