--- a/src/Dex.CreditCardType.Resolver/Dex.CreditCardType.Resolver.csproj
+++ b/src/Dex.CreditCardType.Resolver/Dex.CreditCardType.Resolver.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
+        <LangVersion>default</LangVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
 </Project>
