--- a/src/Dex.MassTransit.Rabbit/Dex.MassTransit.Rabbit.csproj
+++ b/src/Dex.MassTransit.Rabbit/Dex.MassTransit.Rabbit.csproj
@@ -5,9 +5,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Dex.Extensions" Version="1.0.5" />
       <PackageReference Include="MassTransit.AspNetCore" Version="7.1.8" />
       <PackageReference Include="MassTransit.RabbitMQ" Version="7.1.8" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Dex.Extensions\Dex.Extensions.csproj" />
     </ItemGroup>
 
 </Project>
