--- a/src/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
+++ b/src/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
@@ -5,11 +5,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Dex.Extensions" Version="1.0.5" />
       <PackageReference Include="MassTransit.AmazonSQS" Version="7.1.8" />
       <PackageReference Include="MassTransit.AspNetCore" Version="7.1.8" />
       <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.1.8" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Dex.Extensions\Dex.Extensions.csproj" />
     </ItemGroup>
 
 </Project>
