--- a/src/Dex.Pagination/Dex.Pagination.csproj
+++ b/src/Dex.Pagination/Dex.Pagination.csproj
@@ -18,6 +18,15 @@
       <Compile Update="Data\QueryCondition.cs">
         <DependentUpon>IComplexQueryCondition.cs</DependentUpon>
       </Compile>
+      <Compile Update="Conditions\PageCondition.cs">
+        <DependentUpon>IPageCondition.cs</DependentUpon>
+      </Compile>
+      <Compile Update="Conditions\OrderCondition.cs">
+        <DependentUpon>IOrderCondition.cs</DependentUpon>
+      </Compile>
+      <Compile Update="Conditions\QueryCondition.cs">
+        <DependentUpon>IQueryCondition.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
