--- a/src/Dex.Neo4J/Dex.Neo4J.csproj
+++ b/src/Dex.Neo4J/Dex.Neo4J.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dex.Extensions" Version="1.0.11" />
       <PackageReference Include="Neo4jClient" Version="4.1.6" />
     </ItemGroup>
 
@@ -12,10 +13,6 @@
       <Compile Update="BaseGraphFTIndexProvider.cs">
         <DependentUpon>IGraphFTIndexProvider.cs</DependentUpon>
       </Compile>
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Dex.Extensions\Dex.Extensions.csproj" />
     </ItemGroup>
 
 </Project>
