--- a/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
@@ -10,6 +10,9 @@
 
     <ItemGroup>
       <Compile Remove="Neo4j\**" />
+      <Compile Update="BaseOnceExecutor.cs">
+        <DependentUpon>IOnceExecutor.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 
     <ItemGroup>
