refactor, change operation delegate for ExecuteOperation, returning OutboxMessage tests, add test: repeat on failure, several outbox message sample per operation

--- a/src/Dex.Cap/Tests/Dex.Outbox.Command.Test/Dex.Outbox.Command.Test.csproj
+++ b/src/Dex.Cap/Tests/Dex.Outbox.Command.Test/Dex.Outbox.Command.Test.csproj
@@ -16,6 +16,9 @@
       <Compile Update="TestOutboxCommand.cs">
         <DependentUpon>TestCommandHandler.cs</DependentUpon>
       </Compile>
+      <Compile Update="TestOutboxCommand2.cs">
+        <DependentUpon>TestCommand2Handler.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
