new() restriction fix nuget upd warnings resolved License .editorconfig nullable support

--- a/src/Dex.Extensions/Dex.Extensions.csproj
+++ b/src/Dex.Extensions/Dex.Extensions.csproj
@@ -10,5 +10,6 @@
       <RepositoryType>github</RepositoryType>
       <EnableNETAnalyzers>true</EnableNETAnalyzers>
       <TargetFramework>netstandard2.1</TargetFramework>
+      <AnalysisMode>AllEnabledByDefault</AnalysisMode>
   </PropertyGroup>
 </Project>
