--- a/src/Dex.MassTransit/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
@@ -1,15 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.0.12</Version>
+    <PackageProjectUrl>https://github.com/dex-it/dex-common/tree/main/src/Dex.MassTransit/Dex.MassTransit.SQS</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <DocumentationFile>Dex.MassTransit.SQS.xml</DocumentationFile>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <PackageReference Include="Dex.Extensions" Version="1.0.11" />
-      <PackageReference Include="MassTransit.AmazonSQS" Version="7.2.1" />
-      <PackageReference Include="MassTransit.AspNetCore" Version="7.2.1" />
-      <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.1" />
-      <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Dex.Extensions" Version="1.0.11" />
+    <PackageReference Include="MassTransit.AmazonSQS" Version="7.2.1" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.2.1" />
+    <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+  </ItemGroup>
 
 </Project>
