--- a/src/Dex.MassTransit/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
@@ -1,16 +1,28 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.12</Version>
+    <Version>1.0.16</Version>
     <PackageProjectUrl>https://github.com/dex-it/dex-common/tree/main/src/Dex.MassTransit/Dex.MassTransit.SQS</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
     <DocumentationFile>Dex.MassTransit.SQS.xml</DocumentationFile>
+    <Authors>dex team</Authors>
   </PropertyGroup>
+
+  <!-- Source debugging -->
+  <PropertyGroup>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Dex.Extensions" Version="1.0.11" />
