--- a/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
@@ -1,27 +1,48 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
-    </ItemGroup>
+  
+  <!--Для NuGet-->
+  <PropertyGroup>
+    <Version>1.0.10</Version>
+    <PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Authors>dex team</Authors>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+  <!--/Для NuGet-->
+  
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+  </ItemGroup>
 
-    <ItemGroup>
-      <Compile Remove="Neo4j\**" />
-      <Compile Update="BaseOnceExecutor.cs">
-        <DependentUpon>IOnceExecutor.cs</DependentUpon>
-      </Compile>
-    </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Neo4j\**" />
+    <Compile Update="BaseOnceExecutor.cs">
+      <DependentUpon>IOnceExecutor.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
 
-    <ItemGroup>
-      <EmbeddedResource Remove="Neo4j\**" />
-    </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="Neo4j\**" />
+  </ItemGroup>
 
-    <ItemGroup>
-      <None Remove="Neo4j\**" />
-    </ItemGroup>
+  <ItemGroup>
+    <None Remove="Neo4j\**" />
+  </ItemGroup>
 
 </Project>
