--- a/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
@@ -1,40 +1,59 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <Compile Remove="Outbox\Neo4j\**" />
-      <Compile Update="OutboxHandler.cs">
-        <DependentUpon>IOutboxHandler.cs</DependentUpon>
-      </Compile>
-      <Compile Update="OutboxService.cs">
-        <DependentUpon>IOutboxService.cs</DependentUpon>
-      </Compile>
-      <Compile Update="BaseOutboxDataProvider.cs">
-        <DependentUpon>IOutboxDataProvider.cs</DependentUpon>
-      </Compile>
-      <Compile Update="OutboxMessageHandlerFactory.cs">
-        <DependentUpon>IOutboxMessageHandlerFactory.cs</DependentUpon>
-      </Compile>
-      <Compile Update="DefaultOutboxSerializer.cs">
-        <DependentUpon>IOutboxSerializer.cs</DependentUpon>
-      </Compile>
-    </ItemGroup>
+  <!--Для NuGet-->
+  <PropertyGroup>
+    <Version>1.0.10</Version>
+    <PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Authors>dex team</Authors>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+  <!--/Для NuGet-->
 
-    <ItemGroup>
-      <EmbeddedResource Remove="Outbox\Neo4j\**" />
-    </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Outbox\Neo4j\**" />
+    <Compile Update="OutboxHandler.cs">
+      <DependentUpon>IOutboxHandler.cs</DependentUpon>
+    </Compile>
+    <Compile Update="OutboxService.cs">
+      <DependentUpon>IOutboxService.cs</DependentUpon>
+    </Compile>
+    <Compile Update="BaseOutboxDataProvider.cs">
+      <DependentUpon>IOutboxDataProvider.cs</DependentUpon>
+    </Compile>
+    <Compile Update="OutboxMessageHandlerFactory.cs">
+      <DependentUpon>IOutboxMessageHandlerFactory.cs</DependentUpon>
+    </Compile>
+    <Compile Update="DefaultOutboxSerializer.cs">
+      <DependentUpon>IOutboxSerializer.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
 
-    <ItemGroup>
-      <None Remove="Outbox\Neo4j\**" />
-    </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="Outbox\Neo4j\**" />
+  </ItemGroup>
 
-    <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
-    </ItemGroup>
+  <ItemGroup>
+    <None Remove="Outbox\Neo4j\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+  </ItemGroup>
 
 </Project>
