support secure connection to ampq (#37)
* support secure connection to ampq

* add auth

* add alternative mq options

* merge conflicts resolved

--- a/src/Dex.MassTransit/Dex.MassTransit.Rabbit/Dex.MassTransit.Rabbit.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit.Rabbit/Dex.MassTransit.Rabbit.csproj
@@ -29,5 +29,11 @@
     <PackageReference Include="MassTransit.AspNetCore" Version="7.2.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Dex.MassTransit.Rabbit.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   
 </Project>
