--- a/src/Dex.Cap/Dex.Cap.AspNet.Test/Dex.Cap.AspNet.Test.csproj
+++ b/src/Dex.Cap/Dex.Cap.AspNet.Test/Dex.Cap.AspNet.Test.csproj
@@ -5,13 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Dex.Cap.ConsoleTest\Dex.Cap.ConsoleTest.csproj" />
     <ProjectReference Include="..\Dex.Cap.Outbox.Ef\Dex.Cap.Outbox.Ef.csproj" />
-    <ProjectReference Include="..\Dex.Cap.Outbox.QuartzHandler\Dex.Cap.Outbox.Scheduler.csproj" />
+    <ProjectReference Include="..\Dex.Cap.Outbox.QuartzHandler\Dex.Cap.Outbox.AspNetScheduler.csproj" />
   </ItemGroup>
 
 </Project>
