--- a/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
@@ -4,11 +4,11 @@
     <TargetFramework>net5.0</TargetFramework>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <Nullable>enable</Nullable>
+    <Version>1.1.10</Version>
   </PropertyGroup>
 
   <!--Для NuGet-->
   <PropertyGroup>
-    <Version>1.0.10</Version>
     <PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors>dex team</Authors>
@@ -27,16 +27,16 @@
 
   <ItemGroup>
     <Compile Remove="Outbox\Neo4j\**" />
-    <Compile Update="Interfaces\OutboxHandler.cs">
+    <Compile Update="OutboxHandler.cs">
       <DependentUpon>IOutboxHandler.cs</DependentUpon>
     </Compile>
-    <Compile Update="Interfaces\OutboxService.cs">
+    <Compile Update="OutboxService.cs">
       <DependentUpon>IOutboxService.cs</DependentUpon>
     </Compile>
     <Compile Update="BaseOutboxDataProvider.cs">
       <DependentUpon>IOutboxDataProvider.cs</DependentUpon>
     </Compile>
-    <Compile Update="Interfaces\OutboxMessageHandlerFactory.cs">
+    <Compile Update="OutboxMessageHandlerFactory.cs">
       <DependentUpon>IOutboxMessageHandlerFactory.cs</DependentUpon>
     </Compile>
     <Compile Update="DefaultOutboxSerializer.cs">
