add tracing propagation for consumers

--- a/src/Dex.MassTransit/Dex.MassTransit.Rabbit/Dex.MassTransit.Rabbit.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit.Rabbit/Dex.MassTransit.Rabbit.csproj
@@ -35,5 +35,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Dex.MassTransit.ActivityTrace\Dex.MassTransit.ActivityTrace.csproj" />
+  </ItemGroup>
   
 </Project>
