--- a/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Test/Dex.MassTransit.Sample.Test.csproj
+++ b/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Test/Dex.MassTransit.Sample.Test.csproj
@@ -3,11 +3,12 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <OutputType>Exe</OutputType>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MassTransit.AspNetCore" Version="7.2.1" />
-      <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.1" />
+      <PackageReference Include="MassTransit.AspNetCore" Version="7.2.2" />
+      <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
