--- a/src/Dex.MassTransit/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
@@ -1,34 +1,36 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+  
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.16</Version>
-    <PackageProjectUrl>https://github.com/dex-it/dex-common/tree/main/src/Dex.MassTransit/Dex.MassTransit.SQS</PackageProjectUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-    <DocumentationFile>Dex.MassTransit.SQS.xml</DocumentationFile>
-    <Authors>dex team</Authors>
+    <Version>1.1.17</Version>
   </PropertyGroup>
-
-  <!-- Source debugging -->
+  
+  <!--Для NuGet-->
   <PropertyGroup>
+    <PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Authors>dex team</Authors>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
   </PropertyGroup>
+  <!--/Для NuGet-->
+
+  <!-- Source debugging -->
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Dex.Extensions" Version="1.0.11" />
-    <PackageReference Include="MassTransit.AmazonSQS" Version="7.2.1" />
-    <PackageReference Include="MassTransit.AspNetCore" Version="7.2.1" />
-    <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.1" />
+    <PackageReference Include="MassTransit.AmazonSQS" Version="7.2.2" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.2.2" />
+    <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.2" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
   </ItemGroup>
 
