TEST, separate consumer & pubisher

--- a/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Publisher/Dex.MassTransit.Sample.Publisher.csproj
+++ b/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Publisher/Dex.MassTransit.Sample.Publisher.csproj
@@ -18,6 +18,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\Dex.MassTransit.Rabbit\Dex.MassTransit.Rabbit.csproj" />
       <ProjectReference Include="..\..\Dex.MassTransit.SQS\Dex.MassTransit.SQS.csproj" />
+      <ProjectReference Include="..\Dex.MassTransit.Sample.Domain\Dex.MassTransit.Sample.Domain.csproj" />
     </ItemGroup>
 
 </Project>
