--- a/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
@@ -5,6 +5,7 @@
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <Nullable>enable</Nullable>
     <Version>1.2.15</Version>
+    <PackageVersion>1.3.16</PackageVersion>
   </PropertyGroup>
 
   <!--Для NuGet-->
