--- a/src/Dex.Cap/Dex.Cap.Outbox.Neo4j/Dex.Cap.Outbox.Neo4j.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox.Neo4j/Dex.Cap.Outbox.Neo4j.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-        <Version>1.2.15</Version>
+        <PackageVersion>1.2.15</PackageVersion>
     </PropertyGroup>
     <!--Для NuGet-->
     <PropertyGroup>
