--- a/src/Dex.SecurityToken/Dex.SecurityTokenProvider/Dex.SecurityTokenProvider.csproj
+++ b/src/Dex.SecurityToken/Dex.SecurityTokenProvider/Dex.SecurityTokenProvider.csproj
@@ -4,9 +4,26 @@
         <TargetFramework>net5.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <LangVersion>10</LangVersion>
+        <LangVersion>default</LangVersion>
+        <PackageVersion>1.0.1</PackageVersion>
+        <PackageTags>security token management, dataprotection</PackageTags>
     </PropertyGroup>
-
+    
+    <!--Для NuGet-->
+    <PropertyGroup>
+        <PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Authors>dex team</Authors>
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
+    </PropertyGroup>
+    <!--/Для NuGet-->
+    
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.DataProtection.Extensions" Version="5.0.10" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
