--- a/.gitignore
+++ b/.gitignore
@@ -296,3 +296,4 @@ crashlytics-build.properties
 /Sources/Taxi/YandexTaxi.sln.startup.json
 /Sources/Taxi/Taxi.Dispatcher.Desktop/Resources/MapScripts/script.js.map
 /src/nuget-upload.txt
+*.snupkg
