rename root namespace

--- a/src/Dex.SecurityToken/Dex.SecurityToken.RedisStorage/Dex.SecurityToken.RedisStorage.csproj
+++ b/src/Dex.SecurityToken/Dex.SecurityToken.RedisStorage/Dex.SecurityToken.RedisStorage.csproj
@@ -5,10 +5,24 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>default</LangVersion>
-        <RootNamespace>TokenInfoRedisStorageProvider</RootNamespace>
         <PackageVersion>1.0.3</PackageVersion>
+        <PackageTags>security token management, redis storage</PackageTags>
     </PropertyGroup>
-
+    
+    <!--Для NuGet-->
+    <PropertyGroup>
+        <PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Authors>dex team</Authors>
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
+    </PropertyGroup>
+    <!--/Для NuGet-->
+    
     <ItemGroup>
       <PackageReference Include="ServiceStack.Interfaces.Core" Version="5.12.0" />
     </ItemGroup>
