add test, when outbox handler throwing exception by database

--- a/src/Dex.Cap/Tests/Dex.Outbox.Command.Test/Dex.Outbox.Command.Test.csproj
+++ b/src/Dex.Cap/Tests/Dex.Outbox.Command.Test/Dex.Outbox.Command.Test.csproj
@@ -19,6 +19,9 @@
       <Compile Update="TestOutboxCommand2.cs">
         <DependentUpon>TestCommand2Handler.cs</DependentUpon>
       </Compile>
+      <Compile Update="TestDelayOutboxCommand.cs">
+        <DependentUpon>TestDelayCommandHandler.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
